--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
-  "builds": [
-    {
-      "src": "vite.config.js",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
-    }
-  ]
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist"
 }
